--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>My first game</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script src="jquery.min.js"></script>
     </head>
     <body>
         <div id="gridPaper" class="gridPaper">
@@ -36,16 +36,22 @@
             	<div class="corner"></div>
         	</div>
         </div>
+         <canvas id="demo-canvas" width="650" height="400"></canvas>
         <input type="button" onclick="turnLeft()" name="turn" value="<R" />
         <input type="button" onclick="turnRight()" name="turn" value="R>" />
         <input type="button" onclick="pushBackward()" name="backward" value="B" />
         <input type="button" onclick="pushForward()" name="forward" value="F" />
         <input type="button" onclick="stopDriving()" name="forward" value="STOP" />
+        <script type="text/javascript" src="sylvester.js"></script>
+        <script type="text/javascript" src="polygonPad.js"></script>
         <script type="text/javascript" src="geometry.js"></script>
+        <script type="text/javascript" src="polyk.js"></script>
         <script type="text/javascript" src="robot.js"></script>
         <script type="text/javascript" src="room.js"></script>
         <script type="text/javascript" src="grid.js"></script>
         <script type="text/javascript" src="canvas.js"></script>
+        <script type="text/javascript" src="utility.js"></script>
+        <script type="text/javascript" src="maproom.js"></script>
         <script type="text/javascript" src="main.js"></script>
     </body>
 </html>
