--- a/test/tests.html
+++ b/test/tests.html
@@ -10,14 +10,14 @@
   <div id="qunit-fixture"></div>
   <canvas class="graph" id="graph"></canvas>
   <script type="text/javascript" src="qunit-1.17.1.js"></script>
-  <script type="text/javascript" src="../jquery.min.js"></script>
-  <script type="text/javascript" src="../utility.js"></script>
-  <script type="text/javascript" src="../geometry.js"></script>
-  <script type="text/javascript" src="../sylvester.js"></script>
-  <script type="text/javascript" src="../room.js"></script>
-  <script type="text/javascript" src="../robot.js"></script>
-  <script type="text/javascript" src="../maproom.js"></script>
-  <script type="text/javascript" src="../canvas.js"></script>
+  <script type="text/javascript" src="../scripts/lib/jquery.min.js"></script>
+  <script type="text/javascript" src="../scripts/utility.js"></script>
+  <script type="text/javascript" src="../scripts/lib/geometry.js"></script>
+  <script type="text/javascript" src="../scripts/lib/sylvester.js"></script>
+  <script type="text/javascript" src="../scripts/room.js"></script>
+  <script type="text/javascript" src="../scripts/robot.js"></script>
+  <script type="text/javascript" src="../scripts/maproom.js"></script>
+  <script type="text/javascript" src="../scripts/canvas.js"></script>
   <script type="text/javascript" src="tests.js"></script>
 </body>
 </html>
