Now uses lines instead of dimensions for walls.  Also reconizes doorways

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		        <div id="room" class="room">
 					<canvas class="roomCanvas" id="roomCanvas"></canvas>
                     <canvas class="roomMapCanvas" id="roomMapCanvas"></canvas>
-                    <canvas class="canvasLayer2" id="layer2"></canvas>
+                    <canvas class="roomWallCanvas" id="roomWallCanvas"></canvas>
                     <canvas class="canvasLayer3" id="layer3"></canvas>
 				    <div id="pointA" class="pointA"></div>
 				    <div id="pointB" class="pointB"></div>
