Fixing test errors

--- a/test/tests.html
+++ b/test/tests.html
@@ -9,6 +9,7 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <canvas class="graph" id="graph"></canvas>
+  <canvas class="roomWallCanvas" id="roomWallCanvas"></canvas>
   <script type="text/javascript" src="qunit-1.17.1.js"></script>
   <script type="text/javascript" src="../scripts/lib/jquery.min.js"></script>
   <script type="text/javascript" src="../scripts/utility.js"></script>
