--- a/test/tests.html
+++ b/test/tests.html
@@ -10,11 +10,14 @@
   <div id="qunit-fixture"></div>
   <canvas class="graph" id="graph"></canvas>
   <canvas class="roomWallCanvas" id="roomWallCanvas"></canvas>
+  <canvas class="roomMapCanvas" id="roomMapCanvas"></canvas>
+  <canvas class="roomCanvas" id="roomCanvas"></canvas>
   <script type="text/javascript" src="qunit-1.17.1.js"></script>
   <script type="text/javascript" src="../scripts/lib/jquery.min.js"></script>
   <script type="text/javascript" src="../scripts/utility.js"></script>
   <script type="text/javascript" src="../scripts/lib/geometry.js"></script>
   <script type="text/javascript" src="../scripts/lib/sylvester.js"></script>
+  <script type="text/javascript" src="../scripts/lib/polyk.js"></script>
   <script type="text/javascript" src="../scripts/room.js"></script>
   <script type="text/javascript" src="../scripts/robot.js"></script>
   <script type="text/javascript" src="../scripts/maproom.js"></script>
