Moving cell dimension properties into cell class

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<html>
+<html debug="true">
     <head>
         <title>My first game</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>
+
+		
 		<script src="scripts/lib/jquery.min.js"></script>
     </head>
     <body>
