Working on stack overflow problem

--- a/simulator/index.html
+++ b/simulator/index.html
@@ -2,10 +2,7 @@
     <head>
         <title>My first game</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>
-
-		
-		<script src="scripts/lib/jquery.min.js"></script>
+		<script src="../scripts/lib/jquery.min.js"></script>
     </head>
     <body>
         <div id="gridPaper" class="gridPaper">
@@ -47,15 +44,15 @@
         <input type="button" onclick="pushBackward()" name="backward" value="B" />
         <input type="button" onclick="pushForward()" name="forward" value="F" />
         <input type="button" onclick="stopDriving()" name="forward" value="STOP" />
-        <script type="text/javascript" src="scripts/lib/sylvester.js"></script>
-        <script type="text/javascript" src="scripts/lib/geometry.js"></script>
-        <script type="text/javascript" src="scripts/lib/polyk.js"></script>
-        <script type="text/javascript" src="scripts/robot.js"></script>
-        <script type="text/javascript" src="scripts/room.js"></script>
-        <script type="text/javascript" src="scripts/grid.js"></script>
-        <script type="text/javascript" src="scripts/canvas.js"></script>
-        <script type="text/javascript" src="scripts/utility.js"></script>
-        <script type="text/javascript" src="scripts/maproom.js"></script>
-        <script type="text/javascript" src="scripts/main.js"></script>
+        <script type="text/javascript" src="../scripts/lib/sylvester.js"></script>
+        <script type="text/javascript" src="../scripts/lib/geometry.js"></script>
+        <script type="text/javascript" src="../scripts/lib/polyk.js"></script>
+        <script type="text/javascript" src="../scripts/robot.js"></script>
+        <script type="text/javascript" src="../scripts/room.js"></script>
+        <script type="text/javascript" src="../scripts/grid.js"></script>
+        <script type="text/javascript" src="../scripts/canvas.js"></script>
+        <script type="text/javascript" src="../scripts/utility.js"></script>
+        <script type="text/javascript" src="../scripts/maproom.js"></script>
+        <script type="text/javascript" src="../scripts/main.js"></script>
     </body>
 </html>
