mapgrid and mapcell debugged

--- a/simulator/index.html
+++ b/simulator/index.html
@@ -49,6 +49,8 @@
         <script type="text/javascript" src="../scripts/lib/polyk.js"></script>
         <script type="text/javascript" src="../scripts/robot.js"></script>
         <script type="text/javascript" src="../scripts/room.js"></script>
+        <script type="text/javascript" src="../scripts/mapgrid.js"></script>
+        <script type="text/javascript" src="../scripts/mapcell.js"></script>
         <script type="text/javascript" src="../scripts/grid.js"></script>
         <script type="text/javascript" src="../scripts/canvas.js"></script>
         <script type="text/javascript" src="../scripts/utility.js"></script>
