--- a/test/tests.html
+++ b/test/tests.html
@@ -18,6 +18,8 @@
   <script type="text/javascript" src="../scripts/lib/geometry.js"></script>
   <script type="text/javascript" src="../scripts/lib/sylvester.js"></script>
   <script type="text/javascript" src="../scripts/lib/polyk.js"></script>
+  <script type="text/javascript" src="../scripts/mapcell.js"></script>
+  <script type="text/javascript" src="../scripts/mapgrid.js"></script>
   <script type="text/javascript" src="../scripts/room.js"></script>
   <script type="text/javascript" src="../scripts/robot.js"></script>
   <script type="text/javascript" src="../scripts/maproom.js"></script>
