Longest wall search works

--- a/test/tests.html
+++ b/test/tests.html
@@ -20,6 +20,7 @@
   <script type="text/javascript" src="../scripts/lib/polyk.js"></script>
   <script type="text/javascript" src="../scripts/mapcell.js"></script>
   <script type="text/javascript" src="../scripts/mapgrid.js"></script>
+  <script type="text/javascript" src="../scripts/wallsearch.js"></script>
   <script type="text/javascript" src="../scripts/room.js"></script>
   <script type="text/javascript" src="../scripts/robot.js"></script>
   <script type="text/javascript" src="../scripts/maproom.js"></script>
