--- a/simulator/index.html
+++ b/simulator/index.html
@@ -51,6 +51,7 @@
         <script type="text/javascript" src="../scripts/room.js"></script>
         <script type="text/javascript" src="../scripts/mapgrid.js"></script>
         <script type="text/javascript" src="../scripts/mapcell.js"></script>
+        <script type="text/javascript" src="../scripts/wallsearch.js"></script>
         <script type="text/javascript" src="../scripts/grid.js"></script>
         <script type="text/javascript" src="../scripts/canvas.js"></script>
         <script type="text/javascript" src="../scripts/utility.js"></script>
