Working on finding route

--- a/simulator/index.html
+++ b/simulator/index.html
@@ -52,6 +52,7 @@
         <script type="text/javascript" src="../scripts/mapgrid.js"></script>
         <script type="text/javascript" src="../scripts/mapcell.js"></script>
         <script type="text/javascript" src="../scripts/wallsearch.js"></script>
+        <script type="text/javascript" src="../scripts/findroute.js"></script>
         <script type="text/javascript" src="../scripts/grid.js"></script>
         <script type="text/javascript" src="../scripts/canvas.js"></script>
         <script type="text/javascript" src="../scripts/utility.js"></script>
