--- a/test/tests.html
+++ b/test/tests.html
@@ -21,6 +21,7 @@
   <script type="text/javascript" src="../scripts/mapcell.js"></script>
   <script type="text/javascript" src="../scripts/mapgrid.js"></script>
   <script type="text/javascript" src="../scripts/wallsearch.js"></script>
+  <script type="text/javascript" src="../scripts/findroute.js"></script>
   <script type="text/javascript" src="../scripts/room.js"></script>
   <script type="text/javascript" src="../scripts/robot.js"></script>
   <script type="text/javascript" src="../scripts/maproom.js"></script>
