Added a scan mode for the turet to scan left and right

--- a/controller/public_html/index.html
+++ b/controller/public_html/index.html
@@ -37,6 +37,7 @@
         </div>
 
         <input type="button" name="slow" value="slow" onclick="server.slow()">
+        <input type="button" name="scan" value="scan" onclick="server.scan()">
         <p>
         <canvas id="routeCanvas" width="400" height="400"
 style="border:1px solid #d3d3d3;">
