Convering code to work with bluetooth style communication

--- a/controller/public_html/test/index.html
+++ b/controller/public_html/test/index.html
@@ -26,6 +26,7 @@
   <script type="text/javascript" src="../scripts/robot.js"></script>
   <script type="text/javascript" src="../scripts/maproom.js"></script>
   <script type="text/javascript" src="../scripts/canvas.js"></script>
+  <script type="text/javascript" src="../scripts/command.js"></script>
   <script type="text/javascript" src="tests.js"></script>
 </body>
 </html>
