Passes all unit tests

--- a/controller/public_html/simulator/index.html
+++ b/controller/public_html/simulator/index.html
@@ -57,6 +57,7 @@
         <script type="text/javascript" src="../scripts/canvas.js"></script>
         <script type="text/javascript" src="../scripts/utility.js"></script>
         <script type="text/javascript" src="../scripts/maproom.js"></script>
+        <script type="text/javascript" src="../scripts/command.js"></script>
         <script type="text/javascript" src="../scripts/simulator.js"></script>
     </body>
 </html>
