--- a/controller/public_html/simulator/index.html
+++ b/controller/public_html/simulator/index.html
@@ -47,7 +47,7 @@
         <script type="text/javascript" src="../scripts/lib/sylvester.js"></script>
         <script type="text/javascript" src="../scripts/lib/geometry.js"></script>
         <script type="text/javascript" src="../scripts/lib/polyk.js"></script>
-        <script type="text/javascript" src="../scripts/robot.js"></script>
+        <script type="text/javascript" src="../scripts/simulated-robot.js"></script>
         <script type="text/javascript" src="../scripts/room.js"></script>
         <script type="text/javascript" src="../scripts/mapgrid.js"></script>
         <script type="text/javascript" src="../scripts/mapcell.js"></script>
