--- a/controller/public_html/test/index.html
+++ b/controller/public_html/test/index.html
@@ -23,7 +23,7 @@
   <script type="text/javascript" src="../scripts/wallsearch.js"></script>
   <script type="text/javascript" src="../scripts/findroute.js"></script>
   <script type="text/javascript" src="../scripts/room.js"></script>
-  <script type="text/javascript" src="../scripts/robot.js"></script>
+  <script type="text/javascript" src="../scripts/simulated-robot.js"></script>
   <script type="text/javascript" src="../scripts/maproom.js"></script>
   <script type="text/javascript" src="../scripts/canvas.js"></script>
   <script type="text/javascript" src="../scripts/command.js"></script>
