Add radar display

--- a/controller/public_html/test/index.html
+++ b/controller/public_html/test/index.html
@@ -8,6 +8,9 @@
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
+  <p>Radar</p>
+  <canvas class="radar" id="radar"></canvas>
+  <p>Graph</p>
   <canvas class="graph" id="graph"></canvas>
   <canvas class="roomWallCanvas" id="roomWallCanvas"></canvas>
   <canvas class="roomMapCanvas" id="roomMapCanvas"></canvas>
@@ -26,6 +29,7 @@
   <script type="text/javascript" src="../scripts/simulated-robot.js"></script>
   <script type="text/javascript" src="../scripts/maproom.js"></script>
   <script type="text/javascript" src="../scripts/canvas.js"></script>
+  <script type="text/javascript" src="../scripts/radar-display.js"></script>
   <script type="text/javascript" src="../scripts/command.js"></script>
   <script type="text/javascript" src="tests.js"></script>
 </body>
